--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -1,5 +1,5 @@
 .innerContent {
-  @apply mx-auto px-4 w-full lg:max-w-[1170px];
+  @apply mx-auto px-4 w-full lg:max-w-[1170px] my-12;
 }
 .detailsCard > div {
   @apply grid lg:grid-cols-3 lg:gap-24 lg:my-6 my-14 gap-10;
